--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^2.0.0",
+    "@sanity/google-maps-input": "^3.0.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "3.0.0",
     "@vercel/og": "^0.0.21",
@@ -23,6 +24,7 @@
     "intl-segmenter-polyfill": "^0.4.4",
     "next": "13.0.6-canary.1",
     "next-sanity": "^3.1.2",
+    "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
