--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/google-maps-input": "^3.0.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "3.0.0",
+    "@vercel/analytics": "^1.0.0",
     "@vercel/og": "^0.0.21",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
