--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "intl-segmenter-polyfill": "^0.4.4",
-    "next": "13.0.6-canary.1",
+    "next": "^13.4.2",
     "next-sanity": "^3.1.2",
     "openai": "^3.1.0",
     "react": "^18.2.0",
