--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^2.0.0",
     "@sanity/google-maps-input": "^3.0.1",
     "@sanity/image-url": "^1.0.1",
